--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,22 @@
 html,
 body,
 #root {
-  height: 100%;
+  height: 100vh;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 .container {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
 .memo-pad {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   padding: 20px;
   border: none;
   outline: none;
