--- a/src/App.css
+++ b/src/App.css
@@ -3,28 +3,29 @@
   padding: 0;
   box-sizing: border-box;
   font-family: sans-serif;
-  color: #e0e0e0;
-  background-color: #ffffff;
+  color: #333;
+  background-color: #fff0d5ff;
 }
 
 html,
 body,
 #root {
+  position: relative;
   height: 100vh;
   overflow: hidden;
   border-radius: 10px;
 }
 
 .container {
-  position: relative;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
 }
 
 .header {
   height: 28px;
+  width: 100vw;
   padding: 8px 20px;
-  border-bottom: 1px solid #2e2e2e;
+  border-bottom: 1px solid #aaa;
   font-size: 12px;
   -webkit-user-select: none;
   user-select: none;
@@ -42,6 +43,7 @@ body,
   resize: none;
   box-sizing: border-box;
   font-family: sans-serif;
+  overflow: auto;
 }
 
 .copy-button {
@@ -49,7 +51,7 @@ body,
   top: 40px;
   right: 10px;
   padding: 8px 12px;
-  background-color: #007aff;
+  background-color: #333;
   color: white;
   border: none;
   border-radius: 5px;
@@ -61,7 +63,7 @@ body,
 }
 
 .copy-button:hover {
-  background-color: #0056b3;
+  background-color: #555;
 }
 
 .copy-button:disabled {
@@ -95,4 +97,5 @@ body,
 
   .copy-button:disabled:hover {
     background-color: #444444;
+  }
 }
