--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,8 @@ body,
 }
 
 .header {
+  position: absolute;
+  top: 0;
   height: 28px;
   width: 100vw;
   padding: 8px 20px;
@@ -33,9 +35,11 @@ body,
 }
 
 .memo-pad {
-  width: 100%;
-  height: 100vh;
-  padding: 20px;
+  position: absolute;
+  top: 28px;
+  bottom: 0px;
+  width: 100vw;
+  padding: 10px 20px;
   border: none;
   outline: none;
   font-size: 16px;
