--- a/src/App.css
+++ b/src/App.css
@@ -4,21 +4,18 @@
   box-sizing: border-box;
   font-family: sans-serif;
   color: #333;
-  background-color: #fff0d5ff;
+  background-color: transparent;
 }
 
-html,
-body,
 #root {
+  background-color: #fff;
   position: relative;
-  height: 100vh;
-  overflow: hidden;
   border-radius: 10px;
-}
-
-.container {
+  border: solid #222 0.5px;
+  overflow: hidden;
   width: 100vw;
   height: 100vh;
+  opacity: 0.8;
 }
 
 .header {
@@ -45,7 +42,6 @@ body,
   font-size: 16px;
   line-height: 1.5;
   resize: none;
-  box-sizing: border-box;
   font-family: sans-serif;
   overflow: auto;
 }
@@ -64,6 +60,8 @@ body,
   z-index: 10;
   transition: background-color 0.2s ease-in-out, opacity 0.2s ease-in-out;
   opacity: 0.8;
+  user-select: none;
+  --webkit-user-select: none;
 }
 
 .copy-button:hover {
@@ -79,8 +77,12 @@ body,
 
 @media (prefers-color-scheme: dark) {
   * {
-    background-color: #1e1e1e;
     color: #e0e0e0;
+  }
+
+  #root {
+    background-color: #1e1e1e;
+    border-color: #000;
   }
 
   .copy-button {
