--- a/src/App.css
+++ b/src/App.css
@@ -8,14 +8,13 @@
 }
 
 #root {
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.8);
   position: relative;
   border-radius: 10px;
   border: solid #222 0.5px;
   overflow: hidden;
   width: 100vw;
   height: 100vh;
-  opacity: 0.8;
 }
 
 .header {
@@ -81,7 +80,7 @@
   }
 
   #root {
-    background-color: #1e1e1e;
+    background-color: rgba(30, 30, 30, 0.8);
     border-color: #000;
   }
 
