--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,9 @@
   cursor: pointer;
   font-size: 14px;
   z-index: 10;
-  transition: background-color 0.2s ease-in-out, opacity 0.2s ease-in-out;
+  transition:
+    background-color 0.2s ease-in-out,
+    opacity 0.2s ease-in-out;
   opacity: 0.8;
   user-select: none;
   --webkit-user-select: none;
