--- a/src/App.css
+++ b/src/App.css
@@ -35,14 +35,28 @@
   top: 28px;
   bottom: 0px;
   width: 100vw;
-  padding: 10px 20px;
   border: none;
   outline: none;
+  resize: none;
+  overflow: hidden; /* Let CodeMirror handle scrolling */
+}
+
+.memo-pad .cm-editor {
+  height: 100%;
   font-size: 16px;
   line-height: 1.5;
-  resize: none;
   font-family: sans-serif;
-  overflow: auto;
+  outline: none;
+  background-color: transparent;
+}
+
+.memo-pad .cm-content,
+.memo-pad .cm-gutter {
+  background-color: transparent;
+}
+
+.memo-pad .cm-scroller {
+  padding: 10px 20px;
 }
 
 .copy-button {
