--- a/src/App.css
+++ b/src/App.css
@@ -79,6 +79,19 @@
   --webkit-user-select: none;
 }
 
+.close-button {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-size: 14px;
+  z-index: 10;
+  user-select: none;
+  --webkit-user-select: none;
+}
+
 .copy-button:hover {
   background-color: #555;
 }
