--- a/src/App.css
+++ b/src/App.css
@@ -56,14 +56,14 @@
 }
 
 .memo-pad .cm-scroller {
-  padding: 10px 20px;
+  padding: 16px 48px;
 }
 
 .copy-button {
   position: absolute;
   top: 40px;
   right: 10px;
-  padding: 8px 12px;
+  padding: 5px 5px 3px;
   background-color: #333;
   color: white;
   border: none;
